lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__impl_item.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"impl Debug for Vec2 {\n                fn debug_fmt(self, f: Formatter) {\n                }\n            }\",\n|p| p.impl_item())"
---
IMPL_ITEM: 0..104 
  IMPL_KW: 0..4 "impl"
  WHITESPACE: 4..5 
  PATH_TYPE: 5..10 
    PATH: 5..10 
      IDENT: 5..10 "Debug"
  WHITESPACE: 10..11 
  FOR_KW: 11..14 "for"
  WHITESPACE: 14..15 
  IMPL_STRUCT_TYPE: 15..19 
    PATH_TYPE: 15..19 
      PATH: 15..19 
        IDENT: 15..19 "Vec2"
  WHITESPACE: 19..20 
  L_BRACE: 20..21 "{"
  WHITESPACE: 21..38 
  FN_ITEM: 38..90 
    FN_KW: 38..40 "fn"
    WHITESPACE: 40..41 
    NAME: 41..50 
      IDENT: 41..50 "debug_fmt"
    PARAM_LIST: 50..70 
      L_PAREN: 50..51 "("
      PARAM: 51..56 
        SELF_KW: 51..55 "self"
        COMMA: 55..56 ","
      WHITESPACE: 56..57 
      PARAM: 57..69 
        NAME_PATTERN: 57..58 
          NAME: 57..58 
            IDENT: 57..58 "f"
        COLON: 58..59 ":"
        WHITESPACE: 59..60 
        PATH_TYPE: 60..69 
          PATH: 60..69 
            IDENT: 60..69 "Formatter"
      R_PAREN: 69..70 ")"
    WHITESPACE: 70..71 
    BLOCK_EXPR: 71..90 
      L_BRACE: 71..72 "{"
      WHITESPACE: 72..89 
      R_BRACE: 89..90 "}"
  WHITESPACE: 90..103 
  R_BRACE: 103..104 "}"
