lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__item_type_expr-2.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"enum Name {\n                    value: String\n                }\n                \",\n|p| p.item_type_expr())"
---
ITEM_TYPE: 0..63 
  ENUM_ITEM: 0..63 
    ENUM_KW: 0..4 "enum"
    WHITESPACE: 4..5 
    NAME: 5..9 
      IDENT: 5..9 "Name"
    WHITESPACE: 9..10 
    L_BRACE: 10..11 "{"
    WHITESPACE: 11..32 
    ENUM_ELEMENT: 32..45 
      FIELD: 32..45 
        NAME: 32..37 
          IDENT: 32..37 "value"
        COLON: 37..38 ":"
        WHITESPACE: 38..39 
        ITEM_TYPE: 39..45 
          PATH_TYPE: 39..45 
            PATH: 39..45 
              IDENT: 39..45 "String"
    WHITESPACE: 45..62 
    R_BRACE: 62..63 "}"
