lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__lua-11.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"lua { x.y()().x.x().y[1][2](),x = 1,2; }\", |p| p.lua_block())"
---
LUA_CHUNK_EXPR: 0..40 
  LUA_KW: 0..3 "lua"
  WHITESPACE: 3..4 
  L_BRACE: 4..5 "{"
  WHITESPACE: 5..6 
  LUA_STMT_EXPR: 6..38 
    LUA_MULTI_EXPR: 6..31 
      LUA_CALL_EXPR: 6..29 
        LUA_INDEX_EXPR: 6..27 
          LUA_INDEX_EXPR: 6..24 
            LUA_FIELD_ACCESS_EXPR: 6..21 
              LUA_CALL_EXPR: 6..19 
                LUA_FIELD_ACCESS_EXPR: 6..17 
                  LUA_FIELD_ACCESS_EXPR: 6..15 
                    LUA_CALL_EXPR: 6..13 
                      LUA_CALL_EXPR: 6..11 
                        LUA_FIELD_ACCESS_EXPR: 6..9 
                          LUA_LIT_EXPR: 6..7 
                            IDENT: 6..7 "x"
                          DOT: 7..8 "."
                          LUA_NAME: 8..9 
                            IDENT: 8..9 "y"
                        LUA_ARG_LIST: 9..11 
                          L_PAREN: 9..10 "("
                          R_PAREN: 10..11 ")"
                      LUA_ARG_LIST: 11..13 
                        L_PAREN: 11..12 "("
                        R_PAREN: 12..13 ")"
                    DOT: 13..14 "."
                    LUA_NAME: 14..15 
                      IDENT: 14..15 "x"
                  DOT: 15..16 "."
                  LUA_NAME: 16..17 
                    IDENT: 16..17 "x"
                LUA_ARG_LIST: 17..19 
                  L_PAREN: 17..18 "("
                  R_PAREN: 18..19 ")"
              DOT: 19..20 "."
              LUA_NAME: 20..21 
                IDENT: 20..21 "y"
            L_BRACKET: 21..22 "["
            LUA_LIT_EXPR: 22..23 
              INT: 22..23 "1"
            R_BRACKET: 23..24 "]"
          L_BRACKET: 24..25 "["
          LUA_LIT_EXPR: 25..26 
            INT: 25..26 "2"
          R_BRACKET: 26..27 "]"
        LUA_ARG_LIST: 27..29 
          L_PAREN: 27..28 "("
          R_PAREN: 28..29 ")"
      COMMA: 29..30 ","
      LUA_LIT_EXPR: 30..31 
        IDENT: 30..31 "x"
    WHITESPACE: 31..32 
    EQ: 32..33 "="
    WHITESPACE: 33..34 
    LUA_MULTI_EXPR: 34..37 
      LUA_LIT_EXPR: 34..35 
        INT: 34..35 "1"
      COMMA: 35..36 ","
      LUA_LIT_EXPR: 36..37 
        INT: 36..37 "2"
    SEMI: 37..38 ";"
  WHITESPACE: 38..39 
  R_BRACE: 39..40 "}"
