lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__lua-14.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"lua { local a,b,c = 1, 'string', nil; }\", |p| p.lua_block())"
---
LUA_BLOCK_EXPR: 0..39 
  LUA_KW: 0..3 "lua"
  WHITESPACE: 3..4 
  L_BRACE: 4..5 "{"
  WHITESPACE: 5..6 
  LUA_LOCAL_STMT: 6..38 
    IDENT: 6..11 "local"
    WHITESPACE: 11..12 
    LUA_NAME: 12..13 
      IDENT: 12..13 "a"
    COMMA: 13..14 ","
    LUA_NAME: 14..15 
      IDENT: 14..15 "b"
    COMMA: 15..16 ","
    LUA_NAME: 16..18 
      IDENT: 16..17 "c"
      WHITESPACE: 17..18 
    EQ: 18..19 "="
    WHITESPACE: 19..20 
    LUA_MULTI_EXPR: 20..36 
      LUA_LIT_EXPR: 20..21 
        INT: 20..21 "1"
      COMMA: 21..22 ","
      WHITESPACE: 22..23 
      LUA_LIT_EXPR: 23..31 
        SINGLE_STRING: 23..31 "'string'"
      COMMA: 31..32 ","
      WHITESPACE: 32..33 
      LUA_LIT_EXPR: 33..36 
        NIL_KW: 33..36 "nil"
    SEMI: 36..37 ";"
    WHITESPACE: 37..38 
  R_BRACE: 38..39 "}"
