lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__lua-15.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"lua { a,b = 1,2; }\", |p| p.lua_block())"
---
LUA_BLOCK_EXPR: 0..18 
  LUA_KW: 0..3 "lua"
  WHITESPACE: 3..4 
  L_BRACE: 4..5 "{"
  WHITESPACE: 5..6 
  LUA_STMT_EXPR: 6..17 
    LUA_MULTI_EXPR: 6..10 
      LUA_LIT_EXPR: 6..7 
        IDENT: 6..7 "a"
      COMMA: 7..8 ","
      LUA_LIT_EXPR: 8..10 
        IDENT: 8..9 "b"
        WHITESPACE: 9..10 
    EQ: 10..11 "="
    WHITESPACE: 11..12 
    LUA_MULTI_EXPR: 12..15 
      LUA_LIT_EXPR: 12..13 
        INT: 12..13 "1"
      COMMA: 13..14 ","
      LUA_LIT_EXPR: 14..15 
        INT: 14..15 "2"
    SEMI: 15..16 ";"
    WHITESPACE: 16..17 
  R_BRACE: 17..18 "}"
