lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__lua-17.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"lua { while true do print(); break; end  }\", |p| p.lua_block())"
---
LUA_CHUNK_EXPR: 0..42 
  LUA_KW: 0..3 "lua"
  WHITESPACE: 3..4 
  L_BRACE: 4..5 "{"
  WHITESPACE: 5..6 
  LUA_WHILE_STMT: 6..39 
    WHILE_KW: 6..11 "while"
    WHITESPACE: 11..12 
    LUA_LIT_EXPR: 12..16 
      TRUE_KW: 12..16 "true"
    WHITESPACE: 16..17 
    IDENT: 17..19 "do"
    WHITESPACE: 19..20 
    LUA_STMT_EXPR: 20..28 
      LUA_MULTI_EXPR: 20..27 
        LUA_CALL_EXPR: 20..27 
          LUA_LIT_EXPR: 20..25 
            IDENT: 20..25 "print"
          LUA_ARG_LIST: 25..27 
            L_PAREN: 25..26 "("
            R_PAREN: 26..27 ")"
      SEMI: 27..28 ";"
    WHITESPACE: 28..29 
    LUA_BREAK_STMT: 29..35 
      BREAK_KW: 29..34 "break"
      SEMI: 34..35 ";"
    WHITESPACE: 35..36 
    IDENT: 36..39 "end"
  WHITESPACE: 39..41 
  R_BRACE: 41..42 "}"
